
syntax = "proto3";
// pay_channel 支付渠道
package channel;
option go_package = "cloud/service/pay/channel;channel";
import "google/protobuf/timestamp.proto";

// PayChannelObject 数据对象
message PayChannelObject {
	// @inject_tag: db:"id" json:"id"
	optional int64 id = 1; //商户编号
	// @inject_tag: db:"code" json:"code"
	optional string code = 2; //渠道编码
	// @inject_tag: db:"status" json:"status"
	optional int32 status = 3; //开启状态
	// @inject_tag: db:"remark" json:"remark"
	optional string remark = 4; //备注
	// @inject_tag: db:"fee_rate" json:"feeRate"
	optional double fee_rate = 5; //渠道费率，单位：百分比
	// @inject_tag: db:"app_id" json:"appId"
	optional int64 app_id = 6; //应用编号
	// @inject_tag: db:"config" json:"config"
	optional bytes config = 7; //支付渠道配置
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 8; //删除
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 9; //租户
	// @inject_tag: db:"creator" json:"creator"
	optional string creator = 10; //创建人
	// @inject_tag: db:"create_time" json:"createTime"
	google.protobuf.Timestamp create_time = 11; //创建时间
	// @inject_tag: db:"updater" json:"updater"
	optional string updater = 12; //更新人
	// @inject_tag: db:"update_time" json:"updateTime"
	google.protobuf.Timestamp update_time = 13; //更新时间
}
// PayChannelCreateRequest 创建数据请求
message PayChannelCreateRequest {
	PayChannelObject data = 1;
}
// PayChannelCreateResponse 创建数据响应
message PayChannelCreateResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// PayChannelUpdateRequest 更新数据请求
message PayChannelUpdateRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //商户编号
	PayChannelObject data = 2;
}
// PayChannelUpdateResponse 更新数据响应
message PayChannelUpdateResponse {
	int64 code = 1;
	string msg = 2;
}
// PayChannelDeleteRequest 删除数据请求
message PayChannelDeleteRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //商户编号
}
// PayChannelDeleteResponse 删除数据响应
message PayChannelDeleteResponse {
	int64 code = 1;
	string msg = 2;
}
// PayChannelRequest 查询单条数据请求
message PayChannelRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //商户编号
}
// PayChannelResponse 查询单条数据响应
message PayChannelResponse {
	int64 code = 1;
	string msg = 2;
	PayChannelObject data = 3;
}
// PayChannelRecoverRequest 恢复数据请求
message PayChannelRecoverRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //商户编号
}
// PayChannelRecoverResponse 删除数据响应
message PayChannelRecoverResponse {
	int64 code = 1;
	string msg = 2;
}
// PayChannelCodeRequest 查询单条数据请求
message PayChannelCodeRequest {
	
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 1; // 租户
	// @inject_tag: db:"app_id" json:"appId"
	optional int64 app_id = 2; // 应用编号
	// @inject_tag: db:"code" json:"code"
	optional string code = 3; // 渠道编码

}
// PayChannelCodeResponse 查询单条数据响应
message PayChannelCodeResponse {
	int64 code = 1;
	string msg = 2;
	PayChannelObject data = 3;
}
// PayChannelListRequest 列表数据
message PayChannelListRequest {
	
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 1; // 租户
	// @inject_tag: db:"app_id" json:"appId"
	optional int64 app_id = 2; // 应用编号
	// @inject_tag: db:"code" json:"code"
	optional string code = 3; // 渠道编码

}

// PayChannelListResponse 数据响应
message PayChannelListResponse {
	int64 code = 1;
  	string msg = 2;
	repeated PayChannelObject data = 3;
}


// PayChannelService 服务
service PayChannelService{
	rpc PayChannelCreate(PayChannelCreateRequest) returns (PayChannelCreateResponse);
	rpc PayChannelUpdate(PayChannelUpdateRequest) returns (PayChannelUpdateResponse);
	rpc PayChannelDelete(PayChannelDeleteRequest) returns (PayChannelDeleteResponse);
	rpc PayChannel(PayChannelRequest) returns (PayChannelResponse);
	rpc PayChannelRecover(PayChannelRecoverRequest) returns (PayChannelRecoverResponse);
	rpc PayChannelCode(PayChannelCodeRequest) returns (PayChannelCodeResponse);
	rpc PayChannelList(PayChannelListRequest) returns (PayChannelListResponse);
}
