
syntax = "proto3";
// pay_order 支付订单
package order;
option go_package = "cloud/service/pay/order;order";
import "google/protobuf/timestamp.proto";
import "pagination.proto";

// PayOrderObject 数据对象
message PayOrderObject {
	// @inject_tag: db:"id" json:"id"
	optional int64 id = 1; //支付订单编号
	// @inject_tag: db:"app_id" json:"appId"
	optional int64 app_id = 2; //应用编号
	// @inject_tag: db:"channel_id" json:"channelId"
	optional int64 channel_id = 3; //渠道编号
	// @inject_tag: db:"channel_code" json:"channelCode"
	optional string channel_code = 4; //渠道编码
	// @inject_tag: db:"merchant_order_id" json:"merchantOrderId"
	optional string merchant_order_id = 5; //商户订单编号
	// @inject_tag: db:"subject" json:"subject"
	optional string subject = 6; //商品标题
	// @inject_tag: db:"body" json:"body"
	optional string body = 7; //商品描述
	// @inject_tag: db:"notify_url" json:"notifyUrl"
	optional string notify_url = 8; //异步通知地址
	// @inject_tag: db:"price" json:"price"
	optional int64 price = 9; //支付金额，单位：分
	// @inject_tag: db:"channel_fee_rate" json:"channelFeeRate"
	optional double channel_fee_rate = 10; //渠道手续费，单位：百分比
	// @inject_tag: db:"channel_fee_price" json:"channelFeePrice"
	optional int64 channel_fee_price = 11; //渠道手续金额，单位：分
	// @inject_tag: db:"status" json:"status"
	optional int32 status = 12; //支付状态
	// @inject_tag: db:"user_ip" json:"userIp"
	optional string user_ip = 13; //用户 IP
	// @inject_tag: db:"expire_time" json:"expireTime"
	google.protobuf.Timestamp expire_time = 14; //订单失效时间
	// @inject_tag: db:"success_time" json:"successTime"
	google.protobuf.Timestamp success_time = 15; //订单支付成功时间
	// @inject_tag: db:"extension_id" json:"extensionId"
	optional int64 extension_id = 16; //支付成功的订单拓展单编号
	// @inject_tag: db:"no" json:"no"
	optional string no = 17; //支付订单号
	// @inject_tag: db:"refund_price" json:"refundPrice"
	optional int64 refund_price = 18; //退款总金额，单位：分
	// @inject_tag: db:"channel_user_id" json:"channelUserId"
	optional string channel_user_id = 19; //渠道用户编号
	// @inject_tag: db:"channel_order_no" json:"channelOrderNo"
	optional string channel_order_no = 20; //渠道订单号
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 21; //删除
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 22; //租户
	// @inject_tag: db:"creator" json:"creator"
	optional string creator = 23; //创建人
	// @inject_tag: db:"create_time" json:"createTime"
	google.protobuf.Timestamp create_time = 24; //创建时间
	// @inject_tag: db:"updater" json:"updater"
	optional string updater = 25; //更新人
	// @inject_tag: db:"update_time" json:"updateTime"
	google.protobuf.Timestamp update_time = 26; //更新时间
}
// PayOrderTotalResponse 列表数据总量
message PayOrderTotalResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// PayOrderCreateRequest 创建数据请求
message PayOrderCreateRequest {
	PayOrderObject data = 1;
}
// PayOrderCreateResponse 创建数据响应
message PayOrderCreateResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// PayOrderUpdateRequest 更新数据请求
message PayOrderUpdateRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //支付订单编号
	PayOrderObject data = 2;
}
// PayOrderUpdateResponse 更新数据响应
message PayOrderUpdateResponse {
	int64 code = 1;
	string msg = 2;
}
// PayOrderDeleteRequest 删除数据请求
message PayOrderDeleteRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //支付订单编号
}
// PayOrderDeleteResponse 删除数据响应
message PayOrderDeleteResponse {
	int64 code = 1;
	string msg = 2;
}
// PayOrderRequest 查询单条数据请求
message PayOrderRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //支付订单编号
}
// PayOrderResponse 查询单条数据响应
message PayOrderResponse {
	int64 code = 1;
	string msg = 2;
	PayOrderObject data = 3;
}
// PayOrderRecoverRequest 恢复数据请求
message PayOrderRecoverRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //支付订单编号
}
// PayOrderRecoverResponse 删除数据响应
message PayOrderRecoverResponse {
	int64 code = 1;
	string msg = 2;
}
// PayOrderListRequest 列表数据
message PayOrderListRequest {
	
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 1; // 租户
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 2; // 删除
	// @inject_tag: db:"app_id" json:"appId"
	optional int64 app_id = 3; // 应用编号
	// @inject_tag: db:"channel_id" json:"channelId"
	optional int64 channel_id = 4; // 渠道编号
	// @inject_tag: db:"channel_code" json:"channelCode"
	optional string channel_code = 5; // 渠道编码
	// @inject_tag: db:"merchant_order_id" json:"merchantOrderId"
	optional string merchant_order_id = 6; // 商户订单编号
	// @inject_tag: db:"no" json:"no"
	optional string no = 7; // 支付订单号
	// @inject_tag: db:"channel_order_no" json:"channelOrderNo"
	optional string channel_order_no = 8; // 渠道订单号
	// @inject_tag: db:"status" json:"status"
	optional int32 status = 9; // 支付状态
	// @inject_tag: db:"begin_create_time" json:"beginCreateTime"
	google.protobuf.Timestamp begin_create_time = 10; // 创建时间
	// @inject_tag: db:"finish_create_time" json:"finishCreateTime"
	google.protobuf.Timestamp finish_create_time = 11; // 创建时间
	// @inject_tag: db:"pagination" json:"pagination"
	optional pagination.PaginationRequest pagination = 12; // 分页
}

// PayOrderListResponse 数据响应
message PayOrderListResponse {
	int64 code = 1;
  	string msg = 2;
	repeated PayOrderObject data = 3;
}
// PayOrderListTotalRequest 列表数据
message PayOrderListTotalRequest {
	
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 1; // 租户
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 2; // 删除
	// @inject_tag: db:"app_id" json:"appId"
	optional int64 app_id = 3; // 应用编号
	// @inject_tag: db:"channel_id" json:"channelId"
	optional int64 channel_id = 4; // 渠道编号
	// @inject_tag: db:"channel_code" json:"channelCode"
	optional string channel_code = 5; // 渠道编码
	// @inject_tag: db:"merchant_order_id" json:"merchantOrderId"
	optional string merchant_order_id = 6; // 商户订单编号
	// @inject_tag: db:"no" json:"no"
	optional string no = 7; // 支付订单号
	// @inject_tag: db:"channel_order_no" json:"channelOrderNo"
	optional string channel_order_no = 8; // 渠道订单号
	// @inject_tag: db:"status" json:"status"
	optional int32 status = 9; // 支付状态
	// @inject_tag: db:"begin_create_time" json:"beginCreateTime"
	google.protobuf.Timestamp begin_create_time = 10; // 创建时间
	// @inject_tag: db:"finish_create_time" json:"finishCreateTime"
	google.protobuf.Timestamp finish_create_time = 11; // 创建时间

}


// PayOrderService 服务
service PayOrderService{
	rpc PayOrderCreate(PayOrderCreateRequest) returns (PayOrderCreateResponse);
	rpc PayOrderUpdate(PayOrderUpdateRequest) returns (PayOrderUpdateResponse);
	rpc PayOrderDelete(PayOrderDeleteRequest) returns (PayOrderDeleteResponse);
	rpc PayOrder(PayOrderRequest) returns (PayOrderResponse);
	rpc PayOrderRecover(PayOrderRecoverRequest) returns (PayOrderRecoverResponse);
	rpc PayOrderList(PayOrderListRequest) returns (PayOrderListResponse);
	rpc PayOrderListTotal(PayOrderListTotalRequest) returns (PayOrderTotalResponse);
}
